--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <li>
         <h1>
           in app1 views.py add the views function <br />
-          <code>def home(request): return HttpResponse('Hello World')</code>
+          <code>from django.Http import HttpResponse <br>def home(request): return HttpResponse('Hello World')</code>
         </h1>
       </li>
 
