--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
           <code>from django.Http import HttpResponse <br>def home(request): return HttpResponse('Hello World')</code>
         </h1>
       </li>
-      <li><h1>for HTML rendering:
+      <li><h1>create a folder called templates in the main folder</h1></li>
+      <li><h1>for HTML rendering add this to views.py:
       <code>def home(request):
     return render(request, "index.html")</code></h1></li>
     </ol>
