--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>Copy Django Steps</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Copy Django Steps</title>
+  </head>
+  <body>
+    <button id="button">Copy Django Setup Steps</button>
+    <button id="button1">Copy book management</button>
 
-<button id="button">Copy Django Setup Steps</button>
-
-<script src="index.js"></script>
-</body>
+    <script src="index.js"></script>
+  </body>
 </html>
